# crawler

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  conanfile.txt  sgconfig.yaml
doc/: todo.md
graphs/: info.txt
inc/: main.hpp  program.hpp
sh/: build  run  test
src/: main.cpp  program.cpp
tests/: CMakeLists.txt
tests/inc/: main_test.hpp
tests/src/: main.cpp  program.cpp
